--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <title>Module-4 Solution</title>
-    <script src="SpeakHello.js"></script>
-    <script src="SpeakGoodBye.js"></script>
-    <script src="script.js"></script>
-</head>
-
-<body>
-    <h1>Module-4 Solution</h1>
-    <p>Welcome to the solution Of Module-4<br>Check out the console in the web developer tools to see if it works!</p>
-</body>
-
+    <head>Abcd</head>
+    <title>Node</title>
+    <body>
+        <h1>Hello</h1>
+    </body>
 </html>
